Changed header to ultratitle, put video after first paragraph

--- a/index.html
+++ b/index.html
@@ -23,24 +23,26 @@
         <div class="content">
             <header>
                 <p></p>
-                <h1 style="text-align: center;">Chinese and American Speed Rail</h1>
+                <p></p>
+                <h1 class="ultratitle" style="text-align: center;">中国高铁：从追赶到创新</h1>
+                <p></p>
                 <p></p>
             </header>
             <main>
-                <div class="video-container">
-                    <video src="high_metal.mp4" controls></video>
-                </div>
                 <p></p>
                 <pre style="font-size: 20px;">
     随着中国的现代化发展，民众的出行的需求也愈发高涨。而高铁这种在保证旅行速度同<br><br>
 时并且成本相较于飞机更低的出行方式已经成为了民众在出行时不可替代的选择。本篇文章将简<br><br>
 单的回顾一下高铁在中国的发展以及其对于中国社会的影响。<br><br>
-<img src="pointy_train.jpg"><br><br>
+<div class="video-container">
+    <video src="high_metal.mp4" controls></video>
+</div>
+<br><br>
     改革开放之初，人们了解到日本在六十年代开发了新兴的高速列车，称之为新干线。当<br><br>
 时的中国政府，看中了这种技术对于中国发展的巨大潜力。高速列车对于地形的需求没有机场那<br><br>
 么高，而且可以沿着之前的普通铁路建造。因此相对于机场，所辐射的区域更为广阔，更利于各<br><br>
 地的民众出行。当然，铁路的运力也是飞机所不能比拟的。<br><br>
-<img src="pointytrain2.jpg"><br><br>
+<img src="pointy_train.jpg"><br><br>
     此外，发展高铁可以同时发展电力等其他技术，所以发展高铁不但能满足人们出行的需<br><br>
 求，同时还能促进其他产业的持续发展，提供大量工作岗位。高铁建好以后所带来的经济效益也<br><br>
 是巨大的。<br><br>
